# sudo-adtrackerblocker-android

./: .gitignore  CHANGELOG.md  NOTICE.md  README.md  build.gradle  buildFilterEngine.sh  changelog.md  dependency-suppression.xml  gradle.properties  rebuild_adblock_libs.sh  settings.gradle
docs/: index.html  navigation.html
docs/scripts/: pages.js  (+3 more)
sudoadtrackerblocker/: .gitignore  CMakeLists.txt  build.gradle  jacoco.exec  licenses.yml  packages.md  proguard-rules.pro
sudoadtrackerblocker/src/androidTest/java/com/sudoplatform/sudoadtrackerblocker/: BaseIntegrationTest.kt  SudoAdTrackerBlockerClientIntegrationTest.kt
sudoadtrackerblocker/src/androidTest/java/com/sudoplatform/sudoadtrackerblocker/blocking/: BlockingExceptionsTest.kt  BlockingProviderTest.kt
sudoadtrackerblocker/src/androidTest/java/com/sudoplatform/sudoadtrackerblocker/s3/: S3ClientIntegrationTest.kt
sudoadtrackerblocker/src/main/: AndroidManifest.xml
sudoadtrackerblocker/src/main/cpp/: AdBlockEngineJni.cpp
sudoadtrackerblocker/src/main/java/com/sudoplatform/sudoadtrackerblocker/: DefaultAdTrackerBlockerClient.kt  SudoAdTrackerBlockerClient.kt  SudoAdTrackerBlockerException.kt  filter_engine.kt
sudoadtrackerblocker/src/sharedTest/java/com/sudoplatform/sudoadtrackerblocker/: TestData.kt  TestFunctions.kt
sudoadtrackerblocker/src/test/java/com/sudoplatform/sudoadtrackerblocker/: BaseTests.kt  SudoAdTrackerBlockerClientCheckUrlTest.kt  SudoAdTrackerBlockerClientClearStorageTest.kt  SudoAdTrackerBlockerClientCloseTest.kt  SudoAdTrackerBlockerClientExceptionsTest.kt  SudoAdTrackerBlockerClientGetActiveRulesetsTest.kt  SudoAdTrackerBlockerClientListRulesetsTest.kt  SudoAdTrackerBlockerClientSetActiveRulesetsTest.kt  SudoAdTrackerBlockerClientUpdateRulesetsTest.kt
uniffi_adblock/: Cargo.toml  README.md  build.rs  uniffi-bindgen.rs  uniffi.toml
uniffi_adblock/src/: filter_engine.udl  lib.rs
(+187 files in other folders)
